added the first blog

--- a/fst.html
+++ b/fst.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My FST Website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>Dhaka Full-Day City Sightseeing Tour</h3>
+        <p>Get a comprehensive tour of Dhaka combined with personalized attention on this private excursion. 
+        You and your party will be able to move at your own pace through the old town in Dhaka, 
+        listening to commentary on the city's history and culture. 
+        A local lunch, a rickshaw ride, 
+        and a traditional wooden boat ride are included.</p>
+    </div>
 </body>
 </html>
