--- a/fst.html
+++ b/fst.html
@@ -8,7 +8,23 @@
 </head>
 <body>
     <div>
-        <h3>Dhaka Full-Day City Sightseeing Tour</h3>
+        <h3>Dhaka Full-Day City Sightseeing Tour: part1</h3>
+        <p>Get a comprehensive tour of Dhaka combined with personalized attention on this private excursion. 
+        You and your party will be able to move at your own pace through the old town in Dhaka, 
+        listening to commentary on the city's history and culture. 
+        A local lunch, a rickshaw ride, 
+        and a traditional wooden boat ride are included.</p>
+    </div>
+    <div>
+        <h3>Dhaka Full-Day City Sightseeing Tour: part2</h3>
+        <p>Get a comprehensive tour of Dhaka combined with personalized attention on this private excursion. 
+        You and your party will be able to move at your own pace through the old town in Dhaka, 
+        listening to commentary on the city's history and culture. 
+        A local lunch, a rickshaw ride, 
+        and a traditional wooden boat ride are included.</p>
+    </div>
+    <div>
+        <h3>Dhaka Full-Day City Sightseeing Tour: part3</h3>
         <p>Get a comprehensive tour of Dhaka combined with personalized attention on this private excursion. 
         You and your party will be able to move at your own pace through the old town in Dhaka, 
         listening to commentary on the city's history and culture. 
