added a list push code

--- a/fst.html
+++ b/fst.html
@@ -31,5 +31,13 @@
         A local lunch, a rickshaw ride, 
         and a traditional wooden boat ride are included.</p>
     </div>
+    <div>
+        <h3>How to you push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
